Kubernetes/api-gateway-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
#  namespace: doctor-patient-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: shivampadaliya/api-gateway:latest
          ports:
            - containerPort: 8765

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  #  namespace: doctor-patient-appointment # Use the namespace you created earlier
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway  # Match the labels in your Deployment
  ports:
    - port: 8765         # Port on the service
      targetPort: 8765   # Port on the container
  type: ClusterIP         # Change to NodePort or LoadBalancer as needed
