Kubernetes/appointment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
        - name: appointment
          image: nakulsiwach/appointment-service:v3
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: appointment
spec:
  type: ClusterIP  # 👈 Makes service externally accessible
  selector:
    app: appointment
  ports:
    - port: 8083
      targetPort: 8083
