Kubernetes/doctor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctorservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctorservice
  template:
    metadata:
      labels:
        app: doctorservice
    spec:
      containers:
        - name: doctor
          image: nakulsiwach/doctor-service:v3
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: doctorservice  # Change this to DOCTORSERVICE
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8082"

spec:
  type: ClusterIP
  selector:
    app: doctorservice
  ports:
    - port: 8082
      targetPort: 8082
