Kubernetes/eureca-server-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
#  namespace: doctor-patient-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: shivampadaliya/eureka-server:latest
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  #  namespace: doctor-patient-appointment # Use the namespace you created earlier
  labels:
    app: service-registry
spec:
  selector:
    app: service-registry  # Match the labels in your Deployment
  ports:
    - port: 8761          # Port on the service
      targetPort: 8761    # Port on the container
  type: ClusterIP         # Change to NodePort or LoadBalancer as needed
