Kubernetes/eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: nakulsiwach/service-registry:v1
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: NodePort
  selector:
    app: eureka
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30061
