Kubernetes/notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: nakulsiwach/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8085"
spec:
  selector:
    app: notification
  ports:
    - port: 8085
      targetPort: 8085
