Kubernetes/patient-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
#  namespace: doctor-patient-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: shivampadaliya/patient-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  #  namespace: doctor-patient-appointment # Use the namespace you created earlier
  labels:
    app: patient-service
spec:
  selector:
    app: patient-service  # Match the labels in your Deployment
  ports:
    - port: 8081         # Port on the service
      targetPort: 8081    # Port on the container
  type: ClusterIP         # Change to NodePort or LoadBalancer as needed
