Kubernetes/patient.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patientservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patientservice
  template:
    metadata:
      labels:
        app: patientservice
    spec:
      containers:
        - name: patientservice
          image: nakulsiwach/patient-service:v2
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: patientservice
spec:
  type: ClusterIP  # internal only
  selector:
    app: patientservice
  ports:
    - port: 8081
      targetPort: 8081
